[gd_scene load_steps=3 format=2]

[ext_resource path="res://data/particles/pieces/piece.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/particles/pieces/4piece.gd" type="Script" id=2]


[node name="Pieces" type="Node2D"]
script = ExtResource( 2 )

[node name="Piece" parent="." instance=ExtResource( 1 )]

[node name="Piece2" parent="." instance=ExtResource( 1 )]

[node name="Piece3" parent="." instance=ExtResource( 1 )]

[node name="Piece4" parent="." instance=ExtResource( 1 )]
